# deka-oss

./: .env.example  .gitignore  README.md  README.zh-CN.md  config.yaml.example  pyproject.toml  scopes.yaml.example  users.yaml.example
.github/workflows/: ci.yml
harness/prompts/: EXTRACTION.md  REFLECTION.md  RUBRIC_DERIVE.md  SYSTEM.md
src/: config_loader.py  paths.py  prompt_io.py
src/anchor/: __init__.py  __main__.py  config.py  errors.py  loader.py  retrieve.py  runner.py  threshold.py  validate.py  writer.py
src/apply/: __init__.py  __main__.py  config.py  errors.py  evaluator.py  features.py  load_session.py  predictor.py  runner.py  schema.py  trainer.py  writer.py
src/auth/: __init__.py  config.py  cookies.py  dependencies.py
src/extraction/: __init__.py  cache.py  dual.py  errors.py  extractor.py  prompt.py  schema.py  session.py
src/logging/: __init__.py  progress_log.py  run_logger.py
src/postgres/: __init__.py  config.py  fetch.py
src/refine/: __init__.py  __main__.py  config.py  derive.py  errors.py  judge.py  judge_client.py  load_session.py  runner.py  sample.py  schema.py  select.py  writer.py
tests/: conftest.py  test_adapt.py  test_artifact_zip.py  test_config_files.py  test_fusion.py  test_paths.py  test_postgres_config.py  test_postgres_fetch.py  test_preflight.py  test_probe_only.py  test_scopes.py  test_search.py  test_search_expr.py  test_serialize_workflow.py  test_session_overrides.py  test_web_api.py
web/: index.html  package-lock.json  package.json  tsconfig.json
whitepaper/: build.sh  metadata.yaml  whitepaper.md
(+154 files in other folders)
