[project]
name = "deka"
version = "0.1.0"
description = "Deka — a four-phase, span-anchored retrieval and refinement workbench (FastAPI + React)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "httpx[socks]",
    "numpy>=1.26",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "psycopg[binary,pool]>=3.2",
    "pymilvus>=2.6.11",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.33.1",
    "scikit-learn>=1.5",
    "uvicorn[standard]>=0.45.0",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: live tests that require BGE-M3 and Milvus services (deselected by default)",
]
addopts = "-m 'not integration'"

[project.scripts]
deka-web = "src.web_api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
